--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,414 @@
 html {
 
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 
 .fixed {
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
-    background-color: orange;
-    box-shadow: 2px 1px 2px black;
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    border-radius: 20px;
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  background-color: orange;
+  box-shadow: 2px 1px 2px black;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-radius: 20px;
 
 }
 
 
 
 a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 
 nav a {
-    text-decoration: none;
-    color: white;
-    margin: 30px;
+  text-decoration: none;
+  color: white;
+  margin: 30px;
 
 
 }
 
 nav {
-    text-align: center;
-    font-size: 2em;
-    padding-top: 10px;
+  text-align: center;
+  font-size: 2em;
+  padding-top: 10px;
 }
 
 nav li {
 
-    display: inline-block;
+  display: inline-block;
 
 }
 
 .navbar {
 
-    background-color: rgb(1, 82, 255);
-    height: 100vh;
+  background-color: rgb(1, 82, 255);
+  height: 100vh;
 }
 
 .aboutpage {
-    background-color: brown;
-    height: 120vh;
-    font-size: 1.7em;
-    padding-top: 10px;
+  background-color: #30b44b;
+  height: 120vh;
+  font-size: 1.7em;
+  padding-top: 10px;
 
 }
 
 .about1 {
-    text-align: center;
-    font-size: 2em;
-    color: white;
+  text-align: center;
+  font-size: 2em;
+  color: white;
 
 }
 
 
+.about2 {
+  background-color: #30b44b;
+  height: 120vh;
+}
+
+
 .maps p {
-    margin-right: 200px;
-    
+  margin-right: 200px;
+
 
 }
 
 
 
 .contact1 {
-    text-align: center;
-    font-size: 2.3em;
+  text-align: center;
+  font-size: 2.3em;
 }
 
 .contactpage {
-    height: 120vh;
-    padding-top: 10px;
+  height: 120vh;
+  padding-top: 10px;
 
 
 
 }
 
 footer {
-    height: 15vh;
-    background-color: black;
+  height: 15vh;
+  background-color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* /// calendar1 /// */
+
+
+*,
+:after,
+:before {
+  box-sizing: border-box
+}
+
+.pull-left {
+  float: left
+}
+
+.pull-right {
+  float: right
+}
+
+.clearfix:after,
+.clearfix:before {
+  content: '';
+  display: table
+}
+
+.clearfix:after {
+  clear: both;
+  display: block
+}
+
+.calendar {
+  width: 300px;
+  font-size: 100%;
+  /* margin: 50px auto 0; */
+  perspective: 1000px;
+  cursor: default;
+  position: relative
+}
+
+.calendar .header {
+  height: 100px;
+  position: relative;
+  color: #fff
+}
+
+.calendar .header .text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #30b44b;
+  padding: 15px;
+  transform: rotateX(90deg);
+  transform-origin: bottom;
+  backface-visibility: hidden;
+  transition: .4s ease-in-out 0s;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, .19), 0 8px 17px 0 rgba(0, 0, 0, .2);
+  opacity: 0
+}
+
+.calendar .header .text>span {
+  text-align: center;
+  padding: 26px;
+  display: block;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+.calendar .header.active .text {
+  transform: rotateX(0deg);
+  opacity: 1
+}
+
+.months {
+  width: 100%;
+  height: 280px;
+  position: relative
+}
+
+.months .hr {
+  height: 1px;
+  margin: 15px 0;
+  background: #ccc
+}
+
+.month {
+  padding: 15px;
+  width: inherit;
+  height: inherit;
+  background: #fff;
+  position: absolute;
+  backface-visibility: hidden;
+  transition: all .4s ease-in-out 0s;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, .19), 0 8px 17px 0 rgba(0, 0, 0, .2)
+}
+
+.months[data-flow="left"] .month {
+  transform: rotateY(-180deg)
+}
+
+.months[data-flow="right"] .month {
+  transform: rotateY(180deg)
+}
+
+.table {
+  width: 100%;
+  font-size: 10px;
+  font-weight: 400;
+  display: table
+}
+
+.table .row {
+  display: table-row
+}
+
+.table .row.head {
+  color: #30b44b;
+  text-transform: uppercase
+}
+
+.table .row .cell {
+  width: 14.28%;
+  padding: 5px;
+  text-align: center;
+  display: table-cell
+}
+
+.table .row .cell.disable {
+  color: #ccc
+}
+
+.table .row .cell span {
+  display: block;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  transition: color, background .4s ease-in-out 0s
+}
+
+.table .row .cell.active span {
+  color: #fff;
+  background-color: #30b44b;
+}
+
+.months .month[data-active="true"] {
+  transform: rotateY(0)
+}
+
+.header [data-action] {
+  color: inherit;
+  position: absolute;
+  top: 50%;
+  margin-top: -20px;
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+  opacity: 0;
+  transition: all .4s ease-in-out 0s
+}
+
+.header [data-action]>i {
+  width: 20px;
+  height: 20px;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-top: -10px;
+  margin-left: -10px
+}
+
+.header [data-action]>i:before,
+.header [data-action]>i:after {
+  top: 50%;
+  margin-top: -1px;
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 20px;
+  border-top: 2px solid;
+  border-radius: 2px
+}
+
+.header [data-action*="prev"] {
+  left: 15px
+}
+
+.header [data-action*="next"] {
+  right: 15px
+}
+
+.header [data-action*="prev"]>i:before,
+.header [data-action*="prev"]>i:after {
+  left: 0
+}
+
+.header [data-action*="prev"]>i:before {
+  top: 3px;
+  transform: rotate(-45deg)
+}
+
+.header [data-action*="prev"]>i:after {
+  top: auto;
+  bottom: 3px;
+  transform: rotate(45deg)
+}
+
+.header [data-action*="next"]>i:before,
+.header [data-action*="next"]>i:after {
+  right: 0
+}
+
+.header [data-action*="next"]>i:before {
+  top: auto;
+  bottom: 3px;
+  transform: rotate(-45deg)
+}
+
+.header [data-action*="next"]>i:after {
+  top: 3px;
+  transform: rotate(45deg)
+}
+
+.header.active [data-action] {
+  opacity: 1
 }
