--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  
 }
 
 ::-webkit-scrollbar {
@@ -19,8 +20,7 @@ body {
   position: fixed;
   bottom: 50px;
   right: 50px;
-  background-color: orange;
-  box-shadow: 2px 1px 2px black;
+  background-color: #fe8100;
   padding-left: 12px;
   padding-right: 12px;
   padding-top: 16px;
@@ -33,7 +33,7 @@ body {
 
 a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 
@@ -51,20 +51,48 @@ nav {
   padding-top: 10px;
 }
 
+/* .homepage {
+  ;
+} */
+
+
+.logo-img {
+  margin-left: 90px;
+  margin-top: 300px;
+  position: absolute;
+  width: 50%;
+    height: auto;
+}
+
+
+
+.brush-img {
+  width: 800px;
+  height: auto;
+  margin-left: 100px;
+  position: absolute;
+}
+
+
 nav li {
 
   display: inline-block;
 
 }
 
-.navbar {
+.homepage {
 
-  background-color: rgb(1, 82, 255);
+  background-color: #8dd69c;
   height: 100vh;
 }
 
+
+span {
+  color: white;
+}
+
 .aboutpage {
-  background-color: #30b44b;
+  background-color: #8dd69c;
   height: 120vh;
   font-size: 1.7em;
   padding-top: 10px;
@@ -80,13 +108,19 @@ nav li {
 
 
 .about2 {
-  background-color: #30b44b;
-  height: 120vh;
+  background-color: #8dd69c;
+  height: 100vh;
 }
 
+.maps {
+  margin-top: 50px;
+  margin-left: 150px;
+}
 
 .maps p {
-  margin-right: 200px;
+  position: absolute;
+  margin-top: 200px;
+  
 
 
 }
@@ -94,12 +128,72 @@ nav li {
 
 
 .contact1 {
-  text-align: center;
+  text-align: right;
+  margin-right: 250px;
+  padding-top: 10px;
   font-size: 2.3em;
+  text-decoration: underline;
+
+
+
+
+}
+.contact1 h1 {
+  margin-top: 40px;
 }
 
+
+
+
+
+
+
+
+.contact1 p {
+  text-align: left;
+  font-size: 1em;
+  margin-left: 350px;
+  background-color: #fe8100;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 20px;
+  padding-right: 40px;
+  padding-left: 40px;
+  border-radius: 10px;
+  position: absolute;
+
+
+
+}
+
+
+.contactbox {
+  padding-right: 100px;
+  padding-left: 500px;
+  padding-top: 100px;
+  padding-bottom: 200px;
+  background-color: #a6e8f6;
+  position: absolute;
+  margin-left: 200px;
+  margin-top: 200px;
+  opacity: 50%;
+
+
+}
+
+.chatbox {
+
+margin-bottom: 600px;
+
+}
+
+
+
+
+
+
 .contactpage {
-  height: 120vh;
+  height: 100vh;
   padding-top: 10px;
 
 
@@ -112,8 +206,110 @@ footer {
 }
 
 
+/* /// chatbox-start /// */
+
+::placeholder {
+  color: gray;
+}
 
 
+
+
+.contact-form {
+  margin: auto;
+  width: 600px;
+  padding: 0 10px;
+  overflow: hidden;
+}
+
+.contact-form-text-email {
+  display: block;
+  width: 15%;
+  box-sizing: border-box;
+  margin: 16px 0 20px 1200px;
+  border: 0;
+  background-color: #a6e8f6;
+  padding: 20px 40px;
+  outline: none;
+  color: grey;
+  transition: 0.5s;
+}
+
+.contact-form-text-name {
+  display: block;
+  width: 15%;
+  box-sizing: border-box;
+  margin: -75px 0 20px 940px;
+  border: 0;
+  background-color: #a6e8f6;
+  padding: 20px 40px;
+  outline: none;
+  color: grey;
+  transition: 0.5s;
+
+}
+
+.contact-form-text-message {
+  display: block;
+  width: 32%;
+  box-sizing: border-box;
+  height: 200px;
+
+  margin: 16px 0 20px 940px;
+  border: 0;
+  background-color: #a6e8f6;
+  padding: 20px 40px;
+  outline: none;
+  color: grey;
+  transition: 0.5s;
+
+}
+
+
+
+
+
+
+
+
+.contact-form-text:hover {
+  box-shadow: 0 0 10px black;
+}
+
+.contact-form-text:focus {
+  box-shadow: 0 0 10px black;
+}
+
+textarea.contact-form-text {
+  resize: none;
+  height: 120px;
+  margin-left: 950px;
+
+}
+
+.contact-form-send {
+  margin-left: 940px;
+  border: 0;
+  background: #a6e8f6;
+  opacity: 50%l;
+  color: #334961;
+  padding: 12px 50px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.contact-form-btn:hover {
+  box-shadow: 0 0 10px black;
+
+}
+
+.contact-bg {
+  background-color: #334961;
+  height: 100vh;
+}
+
+
+/* /// chatbox-end /// */
 
 
 
@@ -223,6 +419,7 @@ footer {
   perspective: 1000px;
   cursor: default;
   position: relative
+  
 }
 
 .calendar .header {
@@ -314,11 +511,12 @@ footer {
 }
 
 .table .row .cell.disable {
-  color: #ccc
+  color: #ccc;
 }
 
 .table .row .cell span {
   display: block;
+  color: black;
   width: 28px;
   height: 28px;
   line-height: 28px;
