--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  
+
 }
 
 ::-webkit-scrollbar {
@@ -37,9 +37,16 @@ a {
 }
 
 
+nav {
+  background-color: white;
+  padding-bottom: 10px;
+}
+
+
+
 nav a {
   text-decoration: none;
-  color: white;
+  color: #fe8100;
   margin: 30px;
 
 
@@ -57,12 +64,12 @@ nav {
 
 
 .logo-img {
-  margin-left: 90px;
-  margin-top: 300px;
+  margin-left: 1200px;
+  margin-top: 400px;
   position: absolute;
-  width: 50%;
-    height: auto;
+  width: 15%;
 }
+
 
 
 
@@ -92,10 +99,9 @@ span {
 }
 
 .aboutpage {
-  background-color: #8dd69c;
-  height: 120vh;
+  background-color: white;
+  height: 100vh;
   font-size: 1.7em;
-  padding-top: 10px;
 
 }
 
@@ -106,11 +112,127 @@ span {
 
 }
 
+.aboutbox {
+  padding-right: 100px;
+  padding-left: 180px;
+  padding-top: 50px;
+  padding-bottom: 180px;
+  background-color: #8dd69c;
+  position: absolute;
+  margin-left: 920px;
+  margin-top: 320px;
+
+
+}
+
+.img-about {
+  width: 20%;
+  margin-left: 950px;
+  position: absolute;
+  margin-top: 350px;
+}
+
+.img-about-up {
+  width: 100%;
+}
+
+
+
+
+
+
+
+
+.boxmessage1 {
+
+  padding-left: 220px;
+  padding-top: 50px;
+  padding-bottom: 200px;
+  background-color: #8dd69c;
+  position: absolute;
+  margin-left: 100px;
+}
+
+.titel-about-boxmessage-1 {
+  position: absolute;
+  margin-left: 110px;
+  margin-top: 15px;
+  font-size: 35px;
+}
+
+.text-about-boxmessage-1 {
+  position: absolute;
+  margin-left: 120px;
+  margin-top: 60px;
+
+
+}
+
+
+
+
+
+.boxmessage2 {
+  padding-left: 180px;
+  padding-top: 80px;
+  padding-bottom: 120px;
+  background-color: #a6e8f6;
+  position: absolute;
+  margin-left: 320px;
+  margin-top: 80px;
+}
+
+
+.text-about-boxmessage-2 {
+  margin-left: 330px;
+  margin-top: 90px;
+  position: absolute;
+  font-size: 25px;
+
+
+
+
+}
+
+.about-text-1 {
+  font-size: 20%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .about2 {
   background-color: #8dd69c;
   height: 100vh;
 }
+
+
+.evenement {
+
+  width: 30%;
+
+}
+
+
+
+
+
+
+
+
+
+
 
 .maps {
   margin-top: 50px;
@@ -120,7 +242,7 @@ span {
 .maps p {
   position: absolute;
   margin-top: 200px;
-  
+
 
 
 }
@@ -138,6 +260,7 @@ span {
 
 
 }
+
 .contact1 h1 {
   margin-top: 40px;
 }
@@ -183,7 +306,7 @@ span {
 
 .chatbox {
 
-margin-bottom: 600px;
+  margin-bottom: 600px;
 
 }
 
@@ -418,8 +541,9 @@ textarea.contact-form-text {
   /* margin: 50px auto 0; */
   perspective: 1000px;
   cursor: default;
-  position: relative
-  
+  position: absolute;
+  margin-left: 980px;
+  margin-top: 150px;
 }
 
 .calendar .header {
