--- a/css/style.css
+++ b/css/style.css
@@ -1,834 +1,156 @@
-html {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-  scroll-behavior: smooth;
+/*NAVIGATIE*/
+nav {
+  padding-bottom: 15px;
+  background-color: white;
 }
 
-
-
-body {
-  margin: 0;
-  padding: 0;
-
-}
-
-::-webkit-scrollbar {
+nav>a:nth-child(1) {
   display: none;
 }
 
-
-.fixed {
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  background-color: #fe8100;
-  padding-left: 12px;
-  padding-right: 12px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  border-radius: 20px;
-
-}
-
-
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-
-nav {
-  background-color: white;
-  padding-bottom: 10px;
-}
-
-
-
-nav a {
-  text-decoration: none;
-  color: #fe8100;
-  margin: 30px;
-
-
-}
-
-nav {
-  text-align: center;
-  font-size: 2em;
-  padding-top: 10px;
-}
-
-/* .homepage {
-  ;
-} */
-
-
-.logo-img {
-  margin-left: 1200px;
-  margin-top: 400px;
-  position: absolute;
-  width: 15%;
-}
-
-
-
-
-.brush-img {
-  width: 800px;
-  height: auto;
-  margin-left: 100px;
-  position: absolute;
-}
-
-
-nav li {
-
-  display: inline-block;
-
-}
-
-.homepage {
-
-  background-color: #8dd69c;
-  height: 100vh;
-}
-
-
-span {
-  color: white;
-}
-
-.aboutpage {
-  background-color: white;
-  height: 100vh;
-  font-size: 1.7em;
-
-}
-
-.about1 {
-  text-align: center;
-  font-size: 2em;
-  color: white;
-
-}
-
-.aboutbox {
-  padding-right: 100px;
-  padding-left: 180px;
-  padding-top: 50px;
-  padding-bottom: 180px;
-  background-color: #8dd69c;
-  position: absolute;
-  margin-left: 920px;
-  margin-top: 320px;
-
-
-}
-
-.img-about {
-  width: 20%;
-  margin-left: 950px;
-  position: absolute;
-  margin-top: 350px;
-}
-
-.img-about-up {
-  width: 100%;
-}
-
-
-
-
-
-
-
-
-.boxmessage1 {
-
-  padding-left: 220px;
-  padding-top: 50px;
-  padding-bottom: 200px;
-  background-color: #8dd69c;
-  position: absolute;
-  margin-left: 100px;
-}
-
-.titel-about-boxmessage-1 {
-  position: absolute;
-  margin-left: 110px;
-  margin-top: 15px;
-  font-size: 35px;
-}
-
-.text-about-boxmessage-1 {
-  position: absolute;
-  margin-left: 120px;
-  margin-top: 60px;
-
-
-}
-
-
-
-
-
-.boxmessage2 {
-  padding-left: 180px;
-  padding-top: 80px;
-  padding-bottom: 120px;
-  background-color: #a6e8f6;
-  position: absolute;
-  margin-left: 320px;
-  margin-top: 80px;
-}
-
-
-.text-about-boxmessage-2 {
-  margin-left: 330px;
-  margin-top: 90px;
-  position: absolute;
-  font-size: 25px;
-
-
-
-
-}
-
-.about-text-1 {
-  font-size: 20%;
-}
-
-
-
-
-
-
-
-
-
-.about2 {
-  background-color: #8dd69c;
-  height: 100vh;
-}
-
-
-.evenement {
-
-  width: 30%;
-
-}
-
-
-
-/* /// icones-contact-start /// */
-
-.icones-contact {
-  position: absolute;
-  width: 20%;
-  margin-left: 300px;
-  margin-top: 80px;
-}
-
-
-
-
-
-.icone-email {
-  position: absolute;
-  width: 15%;
-
-}
-
-.icone-adres {
-  position: absolute;
-  width: 15%;
-  margin-left: 180px;
-
-
-
-}
-
-.icone-gsm {
-  position: absolute;
-  width: 15%;
-  margin-left: 320px;
-
-
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* /// icones-contact-end /// */
-
-
-
-
-/* /// gegevens-contact-start /// */
-
-.E-mail {
-
-  margin-left: 250px;
-  margin-top: 141px;
-  position: absolute;
-
-
-}
-
-.adres {
-
-  margin-left: 450px;
-  margin-top: 141px;
-
-  position: absolute;
-
-
-
-
-
-}
-
-
-.gsm {
-
-  margin-left: 600px;
-  margin-top: 140px;
-  position: absolute;
-
-
-
-
-}
-
-/* /// gegevens-contact-end /// */
-
-
-
-
-
-
-
-.maps {
+nav img {
+  width: 100px;
+  margin-left: 50px;
   margin-top: 50px;
-  margin-left: 150px;
 }
 
-.maps p {
-  position: absolute;
-  margin-top: 200px;
-
-
-
+nav ul {
+  float: right;
+  margin-right: 50px;
+  margin-top: 50px;
+  border-bottom: solid #6B9AC4 3px;
+  width: 1150px;
 }
 
-
-
-.contact1 {
-  text-align: right;
-  margin-right: 250px;
-  padding-top: 10px;
-  font-size: 2.3em;
-  text-decoration: underline;
-
-
-
-
+nav ul li {
+  float: right;
+  margin-bottom: 10px;
 }
 
-.contact1 h1 {
-  margin-top: 40px;
-}
-
-
-
-
-
-
-
-
-.contact1 p {
-  text-align: left;
+nav ul li a {
+  padding-left: 10px;
+  padding-right: 5px;
   font-size: 1em;
-  margin-left: 350px;
-  background-color: #fe8100;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  color: #6B9AC4;
+}
+
+nav ul li span {
+  border-left: 3px solid #6B9AC4;
+  height: 15px;
+  position: absolute;
+  border-radius: 100px;
+}
+
+nav ul li a.active {
+  color: #F4AC45;
+}
+
+nav ul li span.active {
+  border-left: 3px solid #F4AC45;
+  height: 15px;
+  position: absolute;
+  border-radius: 100px;
+}
+
+header {
+  height: 80%;
+  background-image: url(/img/head-foto.png);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+}
+
+header h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+  color: white;
+  font-size: 45px;
+  text-align: center;
+  padding-top: 300px;
+  padding-bottom: 30px;
+  text-shadow: 2px 2px 10px #000000;
+  display: block;
+}
+
+main {
+  margin-left: 100px;
+  margin-right: 100px;
   margin-top: 20px;
-  padding-right: 40px;
-  padding-left: 40px;
-  border-radius: 10px;
-  position: absolute;
-
-
-
 }
 
-
-.contactbox {
-  padding-right: 100px;
-  padding-left: 500px;
-  padding-top: 100px;
-  padding-bottom: 200px;
-  background-color: #a6e8f6;
-  position: absolute;
-  margin-left: 200px;
-  margin-top: 200px;
-  opacity: 50%;
-
-
+main article {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
 }
 
-.chatbox {
-
-  margin-bottom: 600px;
-
+main article section:nth-child(1) h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+  font-size: 30px;
+  color: #6B9AC4;
 }
 
-
-
-
-
-
-.contactpage {
-  height: 100vh;
-  padding-top: 10px;
-
-
-
+main article section p {
+  font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
 }
 
-
-
-
-/* /// chatbox-start /// */
-
-::placeholder {
-  color: gray;
+main article section:nth-child(2) h1 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+  font-size: 30px;
+  color: #F4AC45;
 }
 
-
-
-
-.contact-form {
-  margin: auto;
-  width: 600px;
-  padding: 0 10px;
-  overflow: hidden;
+main #contact {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 50px;
 }
 
-
-.contact-form:hover {
-  box-shadow: 0 0 10px black;
-
-
-
-
+main #contact h1 {
+  margin: 0;
+  padding: 0;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  font-weight: bolder;
+  color: #6B9AC4;
 }
 
-.contact-form-text-email {
-  display: block;
-  width: 15%;
-  box-sizing: border-box;
-  margin: 16px 0 20px 1200px;
-  border: 0;
-  background-color: #a6e8f6;
-  padding: 20px 40px;
-  outline: none;
-  color: grey;
-  transition: 0.5s;
+main #contact p {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
 }
 
-.contact-form-text-name {
-  display: block;
-  width: 15%;
-  box-sizing: border-box;
-  margin: -75px 0 20px 940px;
-  border: 0;
-  background-color: #a6e8f6;
-  padding: 20px 40px;
-  outline: none;
-  color: grey;
-  transition: 0.5s;
-
+main #contact iframe {
+  box-shadow: 10px 5px 10px #adadad;
+  width: 95%;
 }
 
-.contact-form-text-message {
-  display: block;
-  width: 32%;
-  box-sizing: border-box;
-  height: 200px;
-
-  margin: 16px 0 20px 940px;
-  border: 0;
-  background-color: #a6e8f6;
-  padding: 20px 40px;
-  outline: none;
-  color: grey;
-  transition: 0.5s;
-
+main #contact h1:nth-child(3){
+  margin-top: 30px;
 }
 
 
 
-
-
-
-
-
-.contact-form-text:hover {
-  box-shadow: 0 0 10px black;
-}
-
-.contact-form-text:focus {
-  box-shadow: 0 0 10px black;
-}
-
-textarea.contact-form-text {
-  resize: none;
-  height: 120px;
-  margin-left: 950px;
-
-}
-
-.contact-form-send {
-  margin-left: 940px;
-  border: 0;
-  background: #a6e8f6;
-  opacity: 50%l;
-  color: #334961;
-  padding: 12px 50px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.contact-form-btn:hover {
-  box-shadow: 0 0 10px black;
-
-}
-
-.contact-bg {
-  background-color: #334961;
-  height: 100vh;
-}
-
-
-/* /// chatbox-end /// */
-
-/* /// footer-start /// */
-
-footer {
-  height: 15vh;
-  background-color: black;
-}
-
-/* /// footer-end /// */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* /// calendar1 /// */
-
-
-*,
-:after,
-:before {
-  box-sizing: border-box
-}
-
-.pull-left {
-  float: left
-}
-
-.pull-right {
-  float: right
-}
-
-.clearfix:after,
-.clearfix:before {
-  content: '';
-  display: table
-}
-
-.clearfix:after {
-  clear: both;
-  display: block
-}
-
-.calendar {
-  width: 300px;
-  font-size: 100%;
-  /* margin: 50px auto 0; */
-  perspective: 1000px;
-  cursor: default;
-  position: absolute;
-  margin-left: 980px;
-  margin-top: 150px;
-}
-
-.calendar .header {
-  height: 100px;
-  position: relative;
-  color: #fff
-}
-
-.calendar .header .text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #30b44b;
-  padding: 15px;
-  transform: rotateX(90deg);
-  transform-origin: bottom;
-  backface-visibility: hidden;
-  transition: .4s ease-in-out 0s;
-  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, .19), 0 8px 17px 0 rgba(0, 0, 0, .2);
-  opacity: 0
-}
-
-.calendar .header .text>span {
-  text-align: center;
-  padding: 26px;
-  display: block;
-  font-family: 'Roboto Condensed', sans-serif;
-}
-
-.calendar .header.active .text {
-  transform: rotateX(0deg);
-  opacity: 1
-}
-
-.months {
+footer{
   width: 100%;
-  height: 280px;
-  position: relative
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns:40% 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
 }
 
-.months .hr {
-  height: 1px;
-  margin: 15px 0;
-  background: #ccc
-}
-
-.month {
-  padding: 15px;
-  width: inherit;
-  height: inherit;
-  background: #fff;
-  position: absolute;
-  backface-visibility: hidden;
-  transition: all .4s ease-in-out 0s;
-  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, .19), 0 8px 17px 0 rgba(0, 0, 0, .2)
-}
-
-.months[data-flow="left"] .month {
-  transform: rotateY(-180deg)
-}
-
-.months[data-flow="right"] .month {
-  transform: rotateY(180deg)
-}
-
-.table {
-  width: 100%;
-  font-size: 10px;
-  font-weight: 400;
-  display: table
-}
-
-.table .row {
-  display: table-row
-}
-
-.table .row.head {
-  color: #30b44b;
-  text-transform: uppercase
-}
-
-.table .row .cell {
-  width: 14.28%;
-  padding: 5px;
-  text-align: center;
-  display: table-cell
-}
-
-.table .row .cell.disable {
-  color: #ccc;
-}
-
-.table .row .cell span {
-  display: block;
-  color: black;
-  width: 28px;
-  height: 28px;
-  line-height: 28px;
-  transition: color, background .4s ease-in-out 0s
-}
-
-.table .row .cell.active span {
-  color: #fff;
-  background-color: #30b44b;
-}
-
-.months .month[data-active="true"] {
-  transform: rotateY(0)
-}
-
-.header [data-action] {
-  color: inherit;
-  position: absolute;
-  top: 50%;
-  margin-top: -20px;
-  width: 40px;
-  height: 40px;
-  z-index: 1;
-  opacity: 0;
-  transition: all .4s ease-in-out 0s
-}
-
-.header [data-action]>i {
-  width: 20px;
-  height: 20px;
-  display: block;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-top: -10px;
-  margin-left: -10px
-}
-
-.header [data-action]>i:before,
-.header [data-action]>i:after {
-  top: 50%;
-  margin-top: -1px;
-  content: '';
-  position: absolute;
-  height: 2px;
-  width: 20px;
-  border-top: 2px solid;
-  border-radius: 2px
-}
-
-.header [data-action*="prev"] {
-  left: 15px
-}
-
-.header [data-action*="next"] {
-  right: 15px
-}
-
-.header [data-action*="prev"]>i:before,
-.header [data-action*="prev"]>i:after {
-  left: 0
-}
-
-.header [data-action*="prev"]>i:before {
-  top: 3px;
-  transform: rotate(-45deg)
-}
-
-.header [data-action*="prev"]>i:after {
-  top: auto;
-  bottom: 3px;
-  transform: rotate(45deg)
-}
-
-.header [data-action*="next"]>i:before,
-.header [data-action*="next"]>i:after {
-  right: 0
-}
-
-.header [data-action*="next"]>i:before {
-  top: auto;
-  bottom: 3px;
-  transform: rotate(-45deg)
-}
-
-.header [data-action*="next"]>i:after {
-  top: 3px;
-  transform: rotate(45deg)
-}
-
-.header.active [data-action] {
-  opacity: 1
+footer img{
+height: 100px;
 }
